k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lambda-xtb-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: lambda-xtb
